# OpenGL4.5-GameEngine

./: .gitignore  LICENSE  README.md
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  TODO.txt
Engine/App/Config/: config.xml
Engine/App/Config/OpenGL Engine/: Resources.xml  Scene.xml  Shaders.xml
Engine/App/Resources/Shaders/: Composition.FS.glsl  Debug.FS.glsl  Default.Color.FS.glsl  Default.FS.glsl  Default.Light.FS.glsl  Deferred.Light.FS.glsl  Depth.FS.glsl  MVP.Normals.VS.glsl  MVP.Texture.Light.VS.glsl  MVP.Texture.VS.glsl  R2T.FS.glsl  R2T.VS.glsl  SSAO.FS.glsl  Screen.FS.glsl  Screen.VS.glsl
Engine/App/scripts/: post-build.bat
Engine/Demo/: CMakeLists.txt  Main.cpp  SimpleScene.cpp  SimpleScene.h
Engine/Property Sheets/: MacrosDebug.props  MacrosRelease.props  assimp.props  freetype-gl.props  freetype.props  glew.props  glfw.props  havok.props  include.props  pugixml.props  sfml.props
Engine/Property Sheets/x86/: TODO.txt
Engine/Property Sheets/x86/Debug/: assimp.x86.debug.props  freetype-gl.x86.debug.props  ftgl.x86.debug.props  glew.x86.debug.props  glfw.x86.debug.props  havok.x86.debug.props  pugixml.x86.props  sfml.x86.debug.props
Engine/Property Sheets/x86/Release/: assimp.x86.props  freetype-gl.x86.props  ftgl.x86.props  glfw.x86.props  havok.x86.props  pugixml.x86.props  sfml.x86.props
Engine/Source/: Config.h  Engine.h  EngineForward.h
Engine/Source/Assets/: Terrain.cpp  Terrain.h
Engine/Source/Audio/: AudioStream.cpp  AudioStream.h  SoundFX.cpp  SoundFX.h
Engine/Source/C++/: c++11.h
Engine/Source/Component/: AABB.cpp  AABB.h  AudioSource.cpp  AudioSource.h  Component.cpp  Component.h  GameScript.cpp  GameScript.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ObjectInput.cpp  ObjectInput.h  ParticleEffect.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  SkinnedMesh.cpp  SkinnedMesh.h  TODO.txt  Text.cpp  Text.h  Transform.cpp  Transform.h
Engine/Source/Component/Animation/: AnimationController.cpp  AnimationController.h  AnimationSystem.cpp  AnimationSystem.h
Engine/Source/Component/Particles/: ParticleEffect.h
Engine/Source/Component/Transform/: FreezeTransform.cpp  FreezeTransform.h  JointTransform.cpp  JointTransform.h  LimitedTransform.cpp  LimitedTransform.h  SkinningJointTransform.cpp  SkinningJointTransform.h  (+2 more)
Engine/Source/Config/: ResourcePath.h
Engine/Source/Control/: ControlObject.cpp  ControlObject.h
Engine/Source/Core/: Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  InputSystem.cpp  InputSystem.h  Object.cpp  Object.h  WindowManager.cpp  WindowManager.h  WindowObject.cpp  WindowObject.h  World.cpp  World.h
Engine/Source/DLL/: dllmain.cpp
Engine/Source/Debugging/: ProfileTimer.cpp  ProfileTimer.h  ProfilingTimer.cpp  ProfilingTimer.h  TextureDebugger.cpp  TextureDebugger.h
Engine/Source/Editor/: Gizmo.cpp  Gizmo.h
Engine/Source/Event/: EventChannel.cpp  EventChannel.h  EventListener.cpp  EventListener.h  EventSystem.cpp  EventSystem.h  EventType.h  SimpleTimer.cpp  SimpleTimer.h  TimerEvent.h
Engine/Source/GPU/: FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  SSBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/Source/Input/: InputAction.cpp  InputAction.h  InputRules.cpp  InputRules.h  ObjectControl.cpp  ObjectControl.h
Engine/Source/InputComponent/: CameraDebugInput.cpp  CameraDebugInput.h  CameraInput.cpp  CameraInput.h  DebugInput.cpp  DebugInput.h  EditorInput.cpp  EditorInput.h  GlobalInput.cpp  GlobalInput.h  ObjectControl.cpp  ObjectControl.h  PlayerInput.h
Engine/Source/Lighting/: DirectionalLight.cpp  DirectionalLight.h  FrustumSplit.cpp  FrustumSplit.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Engine/Source/Manager/: AudioManager.cpp  AudioManager.h  ColorManager.cpp  ColorManager.h  ColorPicking.cpp  ColorPicking.h  ConfigFile.cpp  ConfigFile.h  DebugInfo.cpp  DebugInfo.h  EventSystem.cpp  EventSystem.h  FontManager.cpp  FontManager.h  HavokCore.cpp  HavokCore.h  Manager.cpp  Manager.h  PhysicsManager.cpp  PhysicsManager.h  RenderingSystem.cpp  RenderingSystem.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
Engine/Source/Math/: quaterion.h
Engine/Source/Motion/: MotionTransition.cpp  MotionTransition.h
Engine/Source/Physics/: PhysX.h  PhysXCore.cpp  PhysXCore.h  PhysXRagdoll.cpp  PhysXRagdoll.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsPhantom.cpp  PhysicsPhantom.h
Engine/Source/Prototyping/: Prototype.cpp  Prototype.h
Engine/Source/Rendering/: DirectOpenGL.cpp  DirectOpenGL.h  Rendering.h  SSAO.cpp  SSAO.h  ShadowMapping.cpp  ShadowMapping.h
Engine/Source/Scripting/: LuaScripting.cpp  LuaScripting.h
Engine/Source/SkeletalSystem/: SkeletalJoint.cpp  SkeletalJoint.h
Engine/Source/Threading/: utils.h
Engine/Source/UI/: DebugOverlayText.cpp  DebugOverlayText.h  GameMenu.cpp  GameMenu.h  MenuSystem.cpp  MenuSystem.h  Overlay.cpp  Overlay.h
Engine/Source/Utils/: 3D.cpp  3D.h  GPU.cpp  GPU.h  OpenGL.cpp  OpenGL.h  Serialization.cpp  Serialization.h
Engine/Source/include/: assimp.h  assimp_utils.h  dll_export.h  gl.cpp  gl.h  gl_defines.h  gl_native.h  gl_utils.h  glfw_keys.h  glm.h  glm_utils.h  havok.h  math.h  pugixml.h  util.h  utils.h
Engine/Source/libs/: edtaa3func.c  xorshift128plus.cpp
Engine/Source/templates/: instance.h  singleton.h
Engine/Visual Studio/: Engine.sln  Engine.vcxproj  Engine.vcxproj.filters
Engine/Visual Studio/Property Sheets/: MacrosDebug.props  MacrosRelease.props  OpenGL-ES3.1.props  PhysX.props  assimp.props  freetype-gl.props  freetype.props  glew.props  glfw.props  havok.props  include.props  sfml.props
Engine/include/: Engine.h  EngineForward.h  Manager.h
Engine/scripts/: export-lib.bat  export-x64.bat  export.bat  win_x64_build_debug.bat  win_x64_build_release.bat  win_x86_build_debug.bat  win_x86_build_release.bat
Engine/scripts/copy-depends/: copy-dep x64 Linux.bat  copy-dep x86-64 Release.bat  copy-dep-linux.bat  copy-dep-win.bat
(+493 files in other folders)
